--- a/src/Pages/Home_Page/Home.css
+++ b/src/Pages/Home_Page/Home.css
@@ -50,7 +50,7 @@
     justify-content: center;
     align-items: left;
     color: white !important;
-    background-image: url('..//..//assets/light_city.jpg');
+    background-image: url('..//..//assets/logo_lamp.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -76,8 +76,17 @@
         font-size: 60px;
         color: white;
         font-weight: bold;
+        text-align: center;
         font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     }
+
+.company-home-title2{
+    font-size: 60px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
 
     .home-sub-text{
         font-size: 18px;
@@ -256,6 +265,11 @@
             text-align: left;
             line-height: 60px;
         }
+        .company-home-title2{
+            font-size: 50px;
+            text-align: left;
+            line-height: 60px;
+        }
         .home-sub-text{
             font-size: 18px;
             text-align: left;
@@ -302,21 +316,30 @@
         .home-main-container{
             letter-spacing: 2px;
             width: 100%;
-            height: 75vh;  
+            height: 75vh;
+             
         }
         .company-home-title{
             font-size: 40px;
             text-align: left;
+            text-align: center;  
+        }
+        .company-home-title2{
+            font-size: 35px;
+            text-align: left;
+            text-align: center;  
         }
         .home-sub-text{
             font-size: 18px;
            text-align: left;
+           text-align: center;  
         }
         
         .main-text{
             font-size: 27px;
             position: relative;
             color: #0b0757;
+            
         }
         .main-text::before {
             content: '';
@@ -326,6 +349,10 @@
         .trusted-text-container{
             margin-top: 20px;
             background: transparent linear-gradient(143deg,#e2f8ff,#e2f8ff) 0 0 no-repeat padding-box;
+        }
+        .home-button{
+            text-align: left;
+
         }
 
     }
