--- a/src/Pages/Service_Page/Service.css
+++ b/src/Pages/Service_Page/Service.css
@@ -3,7 +3,7 @@
     overflow: hidden;
 }
 .serivesBgImg{
-    background-image: url('..//..//assets/pic.jpg');
+    /* background-image: url('..//..//assets/pic.jpg'); */
     background-position:left;
     background-repeat: no-repeat;
     background-size: cover;
@@ -36,11 +36,16 @@
         width: 300px;
         height: 5px;
         position: absolute;
-        bottom: -20px;
+        bottom: -10px;
         color: transparent;
+        transform: translateX(60%); 
         background: transparent linear-gradient(99deg, #5338FF 0%,#FFC465 100%) 0% 0% no-repeat padding-box;
         border-radius: 5px;
     }
+
+    
+
+
 .comprehensive-service-box{
     margin-top: 100px;
 }
